# smart_scout_app

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
apps/agent_service/: dash_tools.py  db.py  llm_provider.py  main.py  memory.py  players_service.py  report_pdf.py  utils.py  viz_tools.py
apps/agent_service/agents/: factory.py  output_parser.py  tools.py
apps/agent_service/routers/: chat.py  deps.py  news.py  players.py
apps/charts/: apps.py  models.py  urls.py  views.py
apps/charts/migrations/: 0001_initial.py
apps/dashboard/: models.py  urls.py  views.py
apps/dashboard/chats/: models.py  urls.py  views.py
apps/dashboard/chats/migrations/: 0001_initial.py  0002_alter_message_options_messagevote_message_upvoters.py  0003_remove_message_upvoters_alter_message_options_and_more.py  0004_message_meta.py
apps/dashboard/chats/static/chats/: chat.css  chat.js
apps/dashboard/chats/templates/chats/: _dashboard_link.html  _message.html  list.html  session.html
apps/dashboard/migrations/: 0001_initial.py  0002_remove_message_session_delete_chatsession_and_more.py  0003_auto_20250804_1540.py  0004_initial.py
apps/ingestion/: seed_and_ingest.py
apps/ingestion/migrations/: 000X_vector_idx.py
apps/users/: apps.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name_and_more.py
apps/users/templatetags/: form_tags.py
config/: settings.py  urls.py
notebooks/: db_checks.ipynb  ingest_news_tests.ipynb  selecting_columns_to_db.ipynb
static/css/: custom.css
staticfiles/css/: custom.css
templates/: base.html
templates/chats/: _message.html  list.html
templates/dashboard/: _dash_body.html  home.html  inline.html
templates/reports/: report.html
templates/users/: login.html  profile.html  profile_edit.html  signup.html
